added R and python scripts for FeatherMC datalogger

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ SampleData.zip
 DENACATH_20250821/
 MORU002_20250501/
 your_site_code_your_deployment_date/
+OAK002_09242025/
+OAK001_09192025/
+OAK001_09242025/
+OAK002_20250924/
